# acs-control-ICP

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/access_control_system_backend/: Cargo.toml  access_control_system_backend.did
src/access_control_system_backend/src/: lib.rs
src/access_control_system_backend/tests/: test_script.sh
